--- a/app/src/main/res/layout/cell_moview.xml
+++ b/app/src/main/res/layout/cell_moview.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/tvNameMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
@@ -34,11 +35,13 @@
             tools:text="Wonder Woman 1984" />
 
         <TextView
+            android:id="@+id/tvProducerMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="DC Comics" />
 
         <TextView
+            android:id="@+id/tvYearDurationMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="2022 - 160min" />
@@ -55,11 +58,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <CheckBox
+            android:id="@+id/checkWasWatchMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Asistido" />
 
         <TextView
+            android:id="@+id/tvRatinMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
