--- a/app/src/main/res/layout/cell_movie.xml
+++ b/app/src/main/res/layout/cell_movie.xml
@@ -61,14 +61,22 @@
             android:id="@+id/checkWasWatchMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="Asistido" />
+            android:gravity="center_vertical"
+            android:text="@string/label_watched" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginVertical="8dp"
+            android:text="@string/label_delete"
+            app:drawableStartCompat="@android:drawable/ic_menu_delete" />
 
         <TextView
             android:id="@+id/tvRatinMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
+            android:gravity="center_vertical"
             app:drawableStartCompat="@android:drawable/btn_star_big_on"
             tools:text="8/10" />
     </androidx.appcompat.widget.LinearLayoutCompat>
