--- a/app/src/main/res/layout/fragment_list_movie.xml
+++ b/app/src/main/res/layout/fragment_list_movie.xml
@@ -5,17 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".presentation.fragment.FirstFragment">
+    tools:context=".presentation.fragment.ListMovieFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/textview_first"
+        android:id="@+id/recyclerListMovie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:itemCount="16"
-        tools:listitem="@layout/cell_moview" />
+        tools:listitem="@layout/cell_movie" />
 </androidx.constraintlayout.widget.ConstraintLayout>
