--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="br.com.lucolimac.moviesmanager.presentation.fragment.FirstFragment"
+        android:name="br.com.lucolimac.moviesmanager.presentation.fragment.ListMovieFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_list_movie">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
