--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,6 @@
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
         android:contentDescription="@string/button_add_movie"
-        app:srcCompat="@android:drawable/ic_menu_add" />
+        app:srcCompat="@drawable/sharp_add_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
