--- a/app/src/main/res/menu/action_menu.xml
+++ b/app/src/main/res/menu/action_menu.xml
@@ -9,6 +9,6 @@
     <item
         android:id="@+id/actionRatingMovie"
         android:icon="@android:drawable/btn_star_big_off"
-        android:title="@string/delete"
+        android:title="@string/to_rating"
         app:showAsAction="ifRoom" />
 </menu>
