--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,9 @@
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/DetailFragment" />
+        <action
+            android:id="@+id/action_ListFragment_to_registerMovieFragment"
+            app:destination="@id/registerMovieFragment" />
     </fragment>
     <fragment
         android:id="@+id/DetailFragment"
@@ -21,11 +24,19 @@
         android:label="@string/detail_fragment_label"
         tools:layout="@layout/fragment_detail_movie">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/ListFragment" />
         <argument
             android:name="movie"
             app:argType="br.com.lucolimac.moviesmanager.domain.entity.Movie" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerMovieFragment"
+        android:name="br.com.lucolimac.moviesmanager.presentation.fragment.RegisterMovieFragment"
+        android:label="Cadastro do filme"
+        tools:layout="@layout/fragment_register_movie" >
+        <argument
+            android:name="movie"
+            app:argType="br.com.lucolimac.moviesmanager.domain.entity.Movie"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
 </navigation>
