--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="general_margin">16dp</dimen>
+    <dimen name="country_item_height">48dp</dimen>
+    <dimen name="button_round_radius">8dp</dimen>
 </resources>
