--- a/app/src/main/res/layout/fragment_detail_movie.xml
+++ b/app/src/main/res/layout/fragment_detail_movie.xml
@@ -30,6 +30,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="2022 - 160min" />
+        <TextView
+            android:id="@+id/tvGenderMovie"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Aventura" />
 
         <CheckBox
             android:id="@+id/checkWasWatchMovie"
